fixed the footer overlap on search results

--- a/css/recipe.css
+++ b/css/recipe.css
@@ -12,5 +12,15 @@
 {
     display: flex;
     flex-wrap: wrap;
-    margin-left: 8%
+    margin-left: 8%;
+    padding:10px;
+    padding-bottom:60px;
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+
 }
